--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_451"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="Java-WebSocket-1.5.7.jar"/>
+	<classpathentry kind="lib" path="slf4j-api-2.0.9.jar"/>
+	<classpathentry kind="lib" path="slf4j-simple-2.0.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
